kubernetes/monitoring/prometheus/ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress-https
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-https
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - prometheus.sudosuad.co.uk
    secretName: prometheus-tls
  rules:
  - host: prometheus.sudosuad.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana-kube-pr-prometheus
            port:
              number: 9090
